@@ -38,6 +38,11 @@ IN DEVELOPMENT
 
   IMPROVEMENTS:
 
+   * ``added``, ``modified``, and ``unknowns`` behaviour made consistent (all three
+     now quote paths where required). Added ``--null`` option to ``added`` and 
+     ``modified`` (for null-separated unknowns, use ``ls --unknown --null``)
+     (Adrian Wilkins)
+
    * BzrBranch._lefthand_history is faster on pack repos.  (Aaron Bentley)
 
    * Branch6.generate_revision_history is faster.  (Aaron Bentley)
@@ -70,6 +75,8 @@ IN DEVELOPMENT
       (Alexander Belchenko)
 
   TESTING:
+    
+    * Added missing blackbox tests for ``modified`` (Adrian Wilkins)
 
     * The branch interface tests were invalid for branches using rich-root
       repositories because the empty string is not a valid file-id.
